Fix scrollbar collapse in Safari

--- a/src/jquery.floatingscroll.less
+++ b/src/jquery.floatingscroll.less
@@ -1,6 +1,6 @@
 .fl-scrolls {
     &, & div {
-        font-size:0;
+        font-size:1px;
         line-height:0;
         margin:0;
         padding:0;
@@ -14,9 +14,10 @@
     & div {
         height:1px;
         overflow:hidden;
+        pointer-events:none;
     }
     & div:before {
-        content:""; /* fixes #6 */
+        content:"\A0"; /* fixes #6 */
     }
     &-hidden {
         bottom:9999px;
